Copy and Paste new Updates

--- a/Interactive_Plotting.ipynb
+++ b/Interactive_Plotting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -17,7 +17,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c7700b406e4e4a9286d2792cf797f8ca",
+       "model_id": "a452d2a9036446d1b1636648880c3b36",
        "version_major": 2,
        "version_minor": 0
       },
@@ -42,12 +42,12 @@
    "source": [
     "# TOM task \n",
     "## 2nd level one-sample ttest\n",
-    "## belief > photo contrast"
+    "## belief > photo contrast (ALL list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {
     "scrolled": false
    },
@@ -64,7 +64,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7063bb500f9f4676a1f342e6e7cff7ad",
+       "model_id": "3a850c766c564fa4beaf7a6251ed7db1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -77,7 +77,7 @@
     }
    ],
    "source": [
-    "atlas_widget = NiftiWidget('/data/wellbeing_analysis/datasink/2ndLevel/task_tom/fwhm_4/con_0004/spmT_0001_thr.nii')\n",
+    "atlas_widget = NiftiWidget('/data/wellbeing_analysis/datasink/2ndLevel/task_tom/fwhm_8/con_0004/spmT_0001.nii')\n",
     "atlas_widget.nifti_plotter(plotting_func=plotting.plot_stat_map, bg_img = '/home/zohyos7/fmri/mni_icbm152_nlin_asym_09c/1mm_T1.nii.gz', threshold=2, vmax=8, display_mode='ortho', cmap='viridis')"
    ]
   },
@@ -85,13 +85,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2nd level two-sample ttest\n",
-    "## TOM task : belief > photo contrast, Democrats > Republican (Dr. Ahn's list)"
+    "## belief > photo contrast (w/o Black list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +105,49 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "24648fb6b2d84423b6806caf830f261b",
+       "model_id": "8b1d6fa7ce69472e808c2e1a85bbbfec",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Text(value='/home/zohyos7/fmri/mni_icbm152_nlin_asym_09c/1mm_T1.nii.gz', description='bg…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "atlas_widget = NiftiWidget('/data/wellbeing_analysis/datasink/BL_one_sample/task_tom/fwhm_8/con_0004/spmT_0001.nii')\n",
+    "atlas_widget.nifti_plotter(plotting_func=plotting.plot_stat_map, bg_img = '/home/zohyos7/fmri/mni_icbm152_nlin_asym_09c/1mm_T1.nii.gz', threshold=2, vmax=8, display_mode='ortho', cmap='viridis')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2nd level two-sample ttest\n",
+    "## TOM task : belief > photo contrast, Democrats > Republican (Dr. Ahn's list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 432x288 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "18c6217424c04fc59d4894226890b2ff",
        "version_major": 2,
        "version_minor": 0
       },
@@ -132,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +188,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dd5c6884268a46bd92bc340745793e56",
+       "model_id": "99b3150be298480b804b6c3a2b343db4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -168,8 +209,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2nd level two-sample ttest\n",
-    "## AFFECT task : Negative > Neutral contrast, Republican > Democrats (Dr. Ahn's list)"
+    "## TOM task : belief > photo contrast, Democrats > Republican (w/o Black list)"
    ]
   },
   {
@@ -189,7 +229,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "46f142b7efc745f18fa286e1beca711e",
+       "model_id": "975c20bb79354c6982f54244e7ad8a5f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -202,41 +242,7 @@
     }
    ],
    "source": [
-    "atlas_widget = NiftiWidget('/data/wellbeing_analysis/datasink/two_sample/task_tom/con04/spmT_0004.nii')\n",
-    "atlas_widget.nifti_plotter(plotting_func=plotting.plot_stat_map, bg_img = '/home/zohyos7/fmri/mni_icbm152_nlin_asym_09c/1mm_T1.nii.gz', threshold=2, vmax=8, display_mode='ortho', cmap='viridis')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 432x288 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bc9bf26367b24bb4a19009c3c509d79f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(Text(value='/home/zohyos7/fmri/mni_icbm152_nlin_asym_09c/1mm_T1.nii.gz', description='bg…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "atlas_widget = NiftiWidget('/data/wellbeing_analysis/datasink/two_sample2/task_tom/con04/spmT_0004.nii')\n",
+    "atlas_widget = NiftiWidget('/data/wellbeing_analysis/datasink/BL_two_sample/task_tom/con04/spmT_0004.nii')\n",
     "atlas_widget.nifti_plotter(plotting_func=plotting.plot_stat_map, bg_img = '/home/zohyos7/fmri/mni_icbm152_nlin_asym_09c/1mm_T1.nii.gz', threshold=2, vmax=8, display_mode='ortho', cmap='viridis')"
    ]
   },
@@ -246,12 +252,12 @@
    "source": [
     "# Affect task \n",
     "## 2nd level one-sample ttest\n",
-    "## Negative > Neutral contrast"
+    "## Negative > Neutral contrast (ALL list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +272,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4dadff4aa68c4da9aaf6a3854d21a369",
+       "model_id": "b342cdddfe9e4754af8e81ff54e15e4f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -279,7 +285,48 @@
     }
    ],
    "source": [
-    "atlas_widget = NiftiWidget('/data/wellbeing_analysis/datasink/2ndLevel/task_affect/fwhm_4/con_0008/spmT_0001_thr.nii')\n",
+    "atlas_widget = NiftiWidget('/data/wellbeing_analysis/datasink/2ndLevel/task_affect/fwhm_4/con_0008/spmT_0001.nii')\n",
+    "atlas_widget.nifti_plotter(plotting_func=plotting.plot_stat_map, bg_img = '/home/zohyos7/fmri/mni_icbm152_nlin_asym_09c/1mm_T1.nii.gz', threshold=2, vmax=8, display_mode='ortho', cmap='viridis')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Negative > Neutral contrast (w/o Black list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 432x288 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a1bc4d7c583641599fa79cb09b241c49",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Text(value='/home/zohyos7/fmri/mni_icbm152_nlin_asym_09c/1mm_T1.nii.gz', description='bg…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "atlas_widget = NiftiWidget('/data/wellbeing_analysis/datasink/BL_one_sample/task_affect/fwhm_4/con_0008/spmT_0001.nii')\n",
     "atlas_widget.nifti_plotter(plotting_func=plotting.plot_stat_map, bg_img = '/home/zohyos7/fmri/mni_icbm152_nlin_asym_09c/1mm_T1.nii.gz', threshold=2, vmax=8, display_mode='ortho', cmap='viridis')"
    ]
   },
@@ -293,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {
     "scrolled": false
    },
@@ -310,7 +357,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7e9c8634b37d442d858245880e4163f4",
+       "model_id": "e62cc21c7e2a4d85a97bf8bf0de583d0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -336,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +398,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8dc3415c010b4d9ab502a8fb3f8c2b4b",
+       "model_id": "f23905d0436b4479a09d243309afee47",
        "version_major": 2,
        "version_minor": 0
       },
@@ -365,6 +412,49 @@
    ],
    "source": [
     "atlas_widget = NiftiWidget('/data/wellbeing_analysis/datasink/two_sample2/task_affect/con08/spmT_0003.nii')\n",
+    "atlas_widget.nifti_plotter(plotting_func=plotting.plot_stat_map, bg_img = '/home/zohyos7/fmri/mni_icbm152_nlin_asym_09c/1mm_T1.nii.gz', threshold=2, vmax=8, display_mode='ortho', cmap='viridis')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Affect task : Negative > Neutral contrast, Republican > Democrats (w/o Black list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 432x288 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7da056581bf145efb58aa63d601af5c0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Text(value='/home/zohyos7/fmri/mni_icbm152_nlin_asym_09c/1mm_T1.nii.gz', description='bg…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "atlas_widget = NiftiWidget('/data/wellbeing_analysis/datasink/BL_two_sample/task_affect/con08/spmT_0003.nii')\n",
     "atlas_widget.nifti_plotter(plotting_func=plotting.plot_stat_map, bg_img = '/home/zohyos7/fmri/mni_icbm152_nlin_asym_09c/1mm_T1.nii.gz', threshold=2, vmax=8, display_mode='ortho', cmap='viridis')"
    ]
   }
