--- a/miscellaneous_codes(formatting_converting)/BIDS_formatting.ipynb
+++ b/miscellaneous_codes(formatting_converting)/BIDS_formatting.ipynb
@@ -414,6 +414,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import shutil\n",
+    "import os\n",
+    "for subj in os.listdir('/data/wellbeing_analysis/datasink/antsflow/'):\n",
+    "    if os.path.exists(os.path.join('/data/wellbeing_bids',subj,'func', \"{}{}\".format(subj,\n",
+    "                                                                   '_task-reward_bold.nii.gz'))) == True:\n",
+    "        os.remove(os.path.join('/data/wellbeing_bids',subj,'func', \"{}{}\".format(subj,\n",
+    "                                                                   '_task-reward_bold.nii.gz')))\n",
+    "        os.remove(os.path.join('/data/wellbeing_bids',subj,'func', \"{}{}\".format(subj,\n",
+    "                                                                   '_task-reward_bold.json')))\n",
+    "        os.remove(os.path.join('/data/wellbeing_bids',subj,'func', \"{}{}\".format(subj,\n",
+    "                                                                   '_task-reward_events.tsv')))\n",
+    "        print(subj)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 31,
    "metadata": {},
    "outputs": [],
