--- a/miscellaneous_codes(formatting_converting)/GunZip_nii_files.ipynb
+++ b/miscellaneous_codes(formatting_converting)/GunZip_nii_files.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,6 +48,37 @@
     "        os.remove(os.path.join(folder, 'anat', \"{}{}\".format(folder,'_T1w.nii')))\n",
     "        print(folder)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.chdir(\"/data/wellbeing_analysis/datasink/antsflow\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#unzip registered anatomical file\n",
+    "for folder in os.listdir(\".\"):\n",
+    "    if os.path.exists(os.path.join(folder, 'anat', \"{}{}\".format(folder,'_T1w.nii'))) == True:\n",
+    "        with open(os.path.join(folder, 'anat', \"{}{}\".format(folder,'_T1w.nii')), 'rb') as f_in, gzip.open(os.path.join(folder, 'anat', \"{}{}\".format(folder,'_T1w.nii.gz')), 'wb') as f_out:\n",
+    "            shutil.copyfileobj(f_in, f_out)\n",
+    "        os.remove(os.path.join(folder, 'anat', \"{}{}\".format(folder,'_T1w.nii')))\n",
+    "        print(folder)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
